chore: Fix ToC spacing

--- a/src/styles/typography.less
+++ b/src/styles/typography.less
@@ -23,7 +23,7 @@ article h2 {
 	font-size: 1.875rem;
 	line-height: 150%;
 
-	&:not(:first-of-type) {
+	&:not(:first-child) {
 		margin-top: 4rem;
 	}
 }
